--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,6 @@
     <color name="indigo900">#1A237E</color>
     <color name="pink900">#F20654</color>
     <color name="black_dribble">#343D45</color>
-    <color name="material_grey100">#FFFFFFF</color>
+    <color name="material_grey100">#FFFFFF</color>
 
 </resources>
