--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,10 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/home_app_bar"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        android:scrollbarFadeDuration="200">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -27,13 +30,11 @@
         android:layout_height="match_parent"
         android:id="@+id/frag_holder"
         android:paddingBottom="@dimen/activity_vertical_margin"
-
-
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.elf.ElfMainActivity"/>
+        tools:context="com.elf.ElfMainActivity">
 
 
 
-
+</FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
