--- a/app/src/main/res/values-v22/styles.xml
+++ b/app/src/main/res/values-v22/styles.xml
@@ -8,4 +8,14 @@
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_alignParentTop">true</item>
     </style>
+
+    <style name="change_profile_top_text">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/black_dribble</item>
+    </style>
+
+    <style name="change_profile_bottom_text">
+        <item name="android:textColor">@color/material_black</item>
+        <item name="android:textSize">22sp</item>
+    </style>
 </resources>
