--- a/app/src/main/res/layout/no_data.xml
+++ b/app/src/main/res/layout/no_data.xml
@@ -7,15 +7,6 @@
     android:layout_height="match_parent">
 
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_warning"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/nodata_img_top"
-        android:id="@+id/imageView6" />
-
     <CustomUI.HelviticaLight
         android:text="You Have to Write Minimum 3Test  "
         android:textSize="@dimen/nodata_txt15_size"
@@ -46,5 +37,14 @@
         android:layout_alignEnd="@+id/imageView6"
         android:layout_marginTop="108dp"
         android:id="@+id/view_test" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_warning"
+        android:layout_marginTop="64dp"
+        android:id="@+id/imageView6"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
