--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -117,4 +117,10 @@
     <dimen name="loginpage_email_txtsize">20sp</dimen>
     <dimen name="change_profile_txtviewtop">16dp</dimen>
     <dimen name="change_profile_textsize">15sp</dimen>
+    <dimen name="nostudent_top">69dp</dimen>
+    <dimen name="no_student_mtop">67dp</dimen>
+    <dimen name="no_student_txtsize">20sp</dimen>
+    <dimen name="lesson_item_row_txtsize">14sp</dimen>
+    <dimen name="add_student_mtop">100dp</dimen>
+    <dimen name="add_student_txtsize">20sp</dimen>
 </resources>
