--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -119,4 +119,59 @@
     <dimen name="lesson_item_row_txtsize">14sp</dimen>
     <dimen name="add_student_mtop">100dp</dimen>
     <dimen name="add_student_txtsize">20sp</dimen>
+    <dimen name="elfic_top">50dp</dimen>
+    <dimen name="elfic_right">25dp</dimen>
+    <dimen name="state_ic_left">15dp</dimen>
+    <dimen name="student_ic_top">120dp</dimen>
+    <dimen name="username_top">15dp</dimen>
+    <dimen name="elfrank_txt_top">13dp</dimen>
+    <dimen name="elfrank_text_left">15dp</dimen>
+    <dimen name="staterank_txt_top">13dp</dimen>
+    <dimen name="username_left">70dp</dimen>
+    <dimen name="phone_number_right">14dp</dimen>
+    <dimen name="phone_numbertext_right">11dp</dimen>
+    <dimen name="phone_number_txt_right">05dp</dimen>
+    <dimen name="school_top">13dp</dimen>
+    <dimen name="school_txt_top">59dp</dimen>
+    <dimen name="button_left">30dp</dimen>
+    <dimen name="elf_button_mtop">50dp</dimen>
+    <dimen name="elf_image_width">50dp</dimen>
+    <dimen name="elf_image_height">50dp</dimen>
+    <dimen name="satate_img_width">50dp</dimen>
+    <dimen name="satate_img_height">50dp</dimen>
+    <dimen name="elf_txt_width">100dp</dimen>
+    <dimen name="elf_txt_height">50dp</dimen>
+    <dimen name="state_renk_txt_width">100dp</dimen>
+    <dimen name="state_renk_txt_height">50dp</dimen>
+    <dimen name="username_txt_width">290dp</dimen>
+    <dimen name="username_txt_height">50dp</dimen>
+    <dimen name="class_icon_width">30dp</dimen>
+    <dimen name="class_icon_height">30dp</dimen>
+    <dimen name="class_txt_width">80dp</dimen>
+    <dimen name="class_txt_height">50dp</dimen>
+    <dimen name="school_txt_width">100dp</dimen>
+    <dimen name="school_txt_height">50dp</dimen>
+    <dimen name="school_icon_width">20dp</dimen>
+    <dimen name="school_icon_height">20dp</dimen>
+    <dimen name="phonenum_icon_width">30dp</dimen>
+    <dimen name="phonenum_icon_height">30dp</dimen>
+    <dimen name="school_edittxt_width">250dp</dimen>
+    <dimen name="school_edittxt_height">50dp</dimen>
+    <dimen name="userimg_icon_width">190dp</dimen>
+    <dimen name="userimg_icon_height">180dp</dimen>
+    <dimen name="elf_txt_size">18sp</dimen>
+    <dimen name="state_txt_size">18sp</dimen>
+    <dimen name="username_txt_top">14dp</dimen>
+    <dimen name="class_txt_size">15sp</dimen>
+    <dimen name="phn_txt_size">15sp</dimen>
+    <dimen name="state_rank_rightmarg">20dp</dimen>
+    <dimen name="school_txt_size">15sp</dimen>
+    <dimen name="buton_txtsize">18sp</dimen>
+    <dimen name="username_txt_size">28sp</dimen>
+    <dimen name="user_pic_height">150dp</dimen>
+    <dimen name="user_pic_mtop">99dp</dimen>
+    <dimen name="nostudent_added_txt_top">50dp</dimen>
+    <dimen name="nostudent_added_txt_size">22sp</dimen>
+    <dimen name="find_txt_size">18sp</dimen>
+    <dimen name="class_icon_left">40dp</dimen>
 </resources>
