--- a/app/src/main/res/layout/no_student.xml
+++ b/app/src/main/res/layout/no_student.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="99dp"
+        android:layout_height="@dimen/user_pic_height"
+        android:layout_marginTop="@dimen/user_pic_mtop"
         android:src="@drawable/ic_user_profile"
         android:id="@+id/imageView" />
 
@@ -18,12 +18,12 @@
         android:layout_height="wrap_content"
         android:text=" NO STUDENT ADDED"
         android:gravity="center"
-        android:textSize="22sp"
+        android:textSize="@dimen/nostudent_added_txt_size"
         android:textColor="@color/black_900"
         android:typeface="serif"
         android:id="@+id/textView6"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="@dimen/nostudent_added_txt_top" />
 
 
     <TextView
@@ -31,24 +31,25 @@
         android:layout_height="wrap_content"
         android:text="Find Student By Student Id"
         android:textColor="@color/black_900"
-        android:textSize="18sp"
+        android:textSize="@dimen/find_txt_size"
         android:gravity="center"
         android:typeface="serif"
         android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/nostudent_added_txt_top"
         android:id="@+id/textView2" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter Student Id Here"
+        android:textSize="@dimen/find_txt_size"
         android:gravity="center"
         android:textColorHint="@color/black_dribble"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/nostudent_added_txt_top"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:id="@+id/editText3" />
@@ -60,10 +61,11 @@
         android:id="@+id/button2"
         android:layout_below="@+id/editText3"
         android:text="search"
+        android:textSize="@dimen/find_txt_size"
         android:typeface="serif"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="56dp" />
+        android:layout_marginTop="@dimen/nostudent_added_txt_top" />
 
 
 </RelativeLayout>
